--- a/.github/workflows/run_daily.yml
+++ b/.github/workflows/run_daily.yml
@@ -1,9 +1,9 @@
-name: Daily Sync of Limit-Up Stocks
+name: 每日涨停股票同步
 
 on:
-  workflow_dispatch:  # 手动触发按钮
+  workflow_dispatch:
   schedule:
-    - cron: '15 7 * * MON-FRI'  # 北京时间15:15(UTC+8 07:15)
+    - cron: '15 7 * * MON-FRI'
 
 jobs:
   sync:
@@ -17,11 +17,10 @@ jobs:
           python-version: '3.10'
       
       - name: 安装依赖
-        run: pip install requests pandas tushare
+        run: pip install akshare pandas requests
       
       - name: 运行脚本
         env:
-          TUSHARE_TOKEN: ${{ secrets.TUSHARE_TOKEN }}
           FEISHU_APP_ID: ${{ secrets.FEISHU_APP_ID }}
           FEISHU_APP_SECRET: ${{ secrets.FEISHU_APP_SECRET }}
           FEISHU_APP_TOKEN: ${{ secrets.FEISHU_APP_TOKEN }}
